# vivi-rust

./: Cargo.toml
src/: main.rs
src/bot_commands/: command_helpers.rs  config.rs  mod.rs  moderation.rs
src/bot_commands/config/: ban_message.rs  ban_word.rs  config.rs  join_role.rs  logs.rs  mod_role.rs  mute_role.rs  setup.rs  warn_expire.rs  warns_max.rs  whitelist.rs
src/bot_commands/moderation/: ban.rs  check_warn.rs  clear_warns.rs  kick.rs  mute.rs  reason.rs  unban.rs  unmute.rs  unwarn.rs  warn.rs
src/schemas/: cases.rs  guild_config.rs  mod.rs
src/services/: warn.rs
